Added library reference to onlineBankingLibrary

--- a/OnlineBanking/OnlineBanking/OnlineBanking.csproj
+++ b/OnlineBanking/OnlineBanking/OnlineBanking.csproj
@@ -79,6 +79,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\onlineBankingLibrary\onlineBankingLibrary\onlineBankingLibrary.csproj">
+      <Project>{70fa141c-cf03-4710-a390-d62b85a87233}</Project>
+      <Name>onlineBankingLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
